syntax = "proto3";

package voting;

import "google/protobuf/any.proto";

option go_package = "./votingpb";

service Voting {
    rpc Validate(ValidateRequest) returns (ValidateResponse);
    rpc Prepare(PrepareRequest) returns (PrepareResponse);
    rpc Vote(VoteRequest) returns (VoteResponse);
}

message ValidateRequest {
    string voter = 1;
    string proposal = 2;
}

message ValidateResponse {
    bool ok = 1;

    double voting_power = 2;
    optional ValidationError validation_error = 3;
}

message ValidationError {
    string message = 2;
    uint32 code = 3;
}

message PrepareRequest {
    string voter = 1;
    string proposal = 2;
    google.protobuf.Any choice = 3;
    optional string reason = 6;
}

message PrepareResponse {
    string id = 1;
    string typed_data = 2;
}

message VoteRequest {
    string id = 1;
    string sig = 2;
}

message VoteResponse {
    string id = 1;
    string ipfs = 2;
    Relayer relayer = 3;
}

message Relayer {
    string address = 1;
    string receipt = 2;
}
